--- a/index.html
+++ b/index.html
@@ -44,7 +44,52 @@
     <div class="card">🥛 Pure Dairy Products</div>
     <div class="card">🥤 Cold Drinks</div>
   </div>
+  </section>
+
+  <section class="menu" id="menu">
+  <h2>Our Menu</h2>
+
+  <div class="menu-cards">
+
+    <div class="menu-card">
+      <img src="images/chai.jpg" alt="Chai">
+      <h3>Famous Chai</h3>
+      <p>Freshly brewed tea, famous across the city.</p>
+    </div>
+
+    <div class="menu-card">
+      <img src="images/samosa.jpg" alt="Samosa">
+      <h3>Samosa</h3>
+      <p>Crispy samosa served hot with taste.</p>
+    </div>
+
+    <div class="menu-card">
+      <img src="images/poha.jpg" alt="Poha">
+      <h3>Poha</h3>
+      <p>Light and healthy traditional breakfast.</p>
+    </div>
+
+    <div class="menu-card">
+      <img src="images/jalebi.jpg" alt="Jalebi">
+      <h3>Jalebi</h3>
+      <p>Fresh and juicy jalebi prepared daily.</p>
+    </div>
+
+    <div class="menu-card">
+      <img src="images/gulabjamun.jpg" alt="Gulab Jamun">
+      <h3>Gulab Jamun</h3>
+      <p>Soft and sweet gulab jamun.</p>
+    </div>
+
+    <div class="menu-card">
+      <img src="images/paneer.jpg" alt="Paneer">
+      <h3>Paneer</h3>
+      <p>Fresh dairy paneer made daily.</p>
+    </div>
+
+  </div>
 </section>
+
 
 
   <footer>
