--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 </nav>
 
 
-  <header class="hero">
+  <header class="hero fade-up">
     <h1>Chourasiya’s Restaurant</h1>
     <p>Famous for Chai, Samosa & Traditional Taste</p>
   </header>
 
-  <section class="about">
+  <section class="about fade-up">
     <h2>About Us</h2>
     <p>
       Chourasiya’s Restaurant is a well-known food destination in Katni, Madhya Pradesh,
@@ -46,7 +46,7 @@
   </div>
   </section>
 
-  <section class="menu" id="menu">
+  <section class="menu fade-up" id="menu">
   <h2>Our Menu</h2>
 
   <div class="menu-cards">
@@ -90,11 +90,65 @@
   </div>
 </section>
 
+<section class="menu fade-up" id="menu">
+  <h2>Our Menu</h2>
+
+  <!-- Breakfast -->
+  <div class="menu-category">
+    <h3>🍳 Breakfast</h3>
+    <img src="images/samosa.jpg" alt="Samosa" class="menu-img">
+    <ul>
+      <li><span>Samosa</span><span>₹15</span></li>
+      <li><span>Aloo Bada</span><span>₹15</span></li>
+      <li><span>Bhaji Bada</span><span>₹15</span></li>
+      <li><span>Poha</span><span>₹30</span></li>
+      <li><span>Kachori</span><span>₹20</span></li>
+    </ul>
+  </div>
+
+  <!-- Sweets -->
+  <div class="menu-category">
+    <h3>🍩 Sweets</h3>
+    <img src="images/jalebi.jpg" alt="Jalebi" class="menu-img">
+    <ul>
+      <li><span>Jalebi</span><span>₹200/kg</span></li>
+      <li><span>Laddu</span><span>₹180/kg</span></li>
+      <li><span>Gulab Jamun</span><span>₹220/kg</span></li>
+      <li><span>Bhalushahi</span><span>₹240/kg</span></li>
+    </ul>
+  </div>
+
+  <!-- Dairy -->
+  <div class="menu-category">
+    <h3>🥛 Dairy Products</h3>
+    <img src="images/milk.jpg" alt="Milk" class="menu-img">
+    <ul>
+      <li><span>Milk</span><span>₹60/L</span></li>
+      <li><span>Curd</span><span>₹80/kg</span></li>
+      <li><span>Paneer</span><span>₹380/kg</span></li>
+    </ul>
+  </div>
+
+  <!-- Cold Drinks -->
+  <div class="menu-category">
+    <h3>🥤 Cold Drinks</h3>
+    <img src="images/cold-drink.jpg" alt="Cold Drinks" class="menu-img">
+    <ul>
+      <li><span>Coca Cola</span><span>₹20</span></li>
+      <li><span>Pepsi</span><span>₹20</span></li>
+      <li><span>Sprite</span><span>₹20</span></li>
+      <li><span>Fanta</span><span>₹20</span></li>
+      <li><span>Mineral Water</span><span>₹15</span></li>
+    </ul>
+  </div>
+
+</section>
+
 
 
   <footer>
     <p>© 2026 Chourasiya’s Restaurant | Developed by Ritesh Chourasiya</p>
   </footer>
-
+<script src="scripts.js"></script>
 </body>
 </html>
