--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chourasiya’s Restaurant</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -144,11 +145,44 @@
 
 </section>
 
+<section class="contact fade-up" id="contact">
+  <h2>📍 Contact Us</h2>
+
+  <div class="contact-container">
+    
+    <div class="contact-info">
+      <p><strong>📞 Phone:</strong> +91 8827245040</p>
+      <p><strong>📍 Address:</strong> Madhav nagar Station Road, Ameerganj Katni (MP), India</p>
+      <p><strong>🕒 Opening Hours:</strong> 5:00 AM – 10:00 PM</p>
+    </div>
+
+    <div class="contact-map">
+      
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d476.37591164275256!2d80. 39199744619542!3d23.79070857706242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x398161acf3fba5d1%3A0xdec0712286810549!2sBharat%20Chourasiya%20Hotel!5e1!3m2!1sen!2sin!4v1771237700721!5m2!1sen!2sin"
+        width="600"
+        height="450"
+        style="border:0;"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </div>
+
+  </div>
+</section>
+
 
 
   <footer>
     <p>© 2026 Chourasiya’s Restaurant | Developed by Ritesh Chourasiya</p>
   </footer>
 <script src="scripts.js"></script>
+<a 
+  href="https://wa.me/918827245040?text=Hello%20I%20want%20to%20order%20from%20Chourasiya’s%20Restaurant" 
+  class="whatsapp-btn"
+  target="_blank"
+>
+  🟢 Order on WhatsApp
+</a>
 </body>
 </html>
